--- a/index.html
+++ b/index.html
@@ -21,18 +21,14 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-
-        </nav>
-    </header>
-
-    <main>
-        <h1>¡Hola mundo!</h1>
-    </main>
-    <footer>
-
-    </footer>
+<div id="grilla">
+    <header class="border">Header</header>
+    <section id="productos" class="border">Section</section>
+    <section id="servicios" class="border">Section</section>
+    <nav class="border">Navegación</nav>
+    <aside class="border">Aside</aside>
+    <footer class="border">Pie de página</footer>
+</div>
 </body>
 
 </html>
