implementación de grid

--- a/index.html
+++ b/index.html
@@ -21,14 +21,64 @@
 </head>
 
 <body>
-<div id="grilla">
-    <header class="border">Header</header>
-    <section id="productos" class="border">Section</section>
-    <section id="servicios" class="border">Section</section>
-    <nav class="border">Navegación</nav>
-    <aside class="border">Aside</aside>
-    <footer class="border">Pie de página</footer>
-</div>
+    <div id="grilla">
+        <header class="border">
+            <div class="topbar">
+                <div class="brand">
+                    <a href="./index.html">
+                        <img src="./assets/images/brand.png" alt="">
+                        <span class="brand_tittle">INMOBILIARIA <span class="brand_second_tittle">PUSCH</span> </span>
+                    </a>
+                </div>
+
+                <div class="topbar_social">
+                    <ul>
+                        <!-- No quería dejar los enlaces vacios! -->
+                        <li><a href="#" target="_blank" rel="noopener"><img class="icon"
+                                    src="./assets/images/facebook.png" alt=""></a></li>
+                        <li><a href="#" target="_blank" rel="noopener"><img class="icon"
+                                    src="./assets/images/instagram.png" alt=""></a></li>
+                    </ul>
+                </div>
+
+                <div class="topbar_items">
+                    <ul>
+                        <li><a href="https://bit.ly/3uaWhUG" target="_blank" rel="noopener"><img class="icon icon_s"
+                                    src="./assets/images/map.png" alt="">Gobernador Medus 1333 - San Benito</a></li>
+                        <li><a href="https://wa.me/5493434473910" target="_blank" rel="noopener"><img
+                                    class="icon icon_s" src="./assets/images/whatsapp.png" alt="">+54 343 447-3910</a>
+                        </li>
+                        <li><a href="https://mail.google.com/mail/?view=cm&source=mailto&to=contacto@inmobiliaria-pusch.com.ar"
+                                target="_blank" rel="noopener"><img class="icon icon_s" src="./assets/images/email.png"
+                                    alt="">contacto@inmobiliaria-pusch.com.ar</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="nav_links">
+                <nav>
+                    <ul>
+                        <li><a href="./index.html">INICIO</a></li>
+                        <li><a href="./pages/busquedas.html">BUSQUEDAS</a></li>
+                        <li><a href="./pages/contacto.html">CONTACTO</a></li>
+                        <li><a href="./pages/acerca_de_nosotros.html">ACERCA DE NOSOTROS</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <section id="buscador" class="border">
+            Section
+        </section>
+        <div class="nav border">
+            Navegación
+        </div>
+        <aside class="nav border">
+            Aside
+        </aside>
+        <footer class="border">
+            Pie de página
+        </footer>
+    </div>
 </body>
 
 </html>
